samples/_failures_safe/1761546558_40448d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41c37926.c: In function ‘main’:
./samples/SAFE/__tmp_41c37926.c:196:9: error: expected declaration or statement at end of input
  196 |         fprintf(stderr, "Empty input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_41c37926.c:196:9: error: expected declaration or statement at end of input
